Ajout filte typecout